# TWStockAnalysis

./: .env.example  .gitignore  CLAUDE.md  README.md  compare_excel.py  pyproject.toml
.claude/: settings.local.json
src/tw_stock_analysis/: __init__.py  alpha.py  config.py  excel_utils.py  indicators.py  prepare.py  run.py  sell.py  sources.py
src/tw_stock_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
