[project]
name = "tw-stock-analysis"
version = "0.1.0"
description = "Daily analysis for 00987A constituents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "requests>=2.32.0",
  "openpyxl>=3.1.2",
  "lxml>=5.2.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
tw-stock-analysis = "tw_stock_analysis.run:main"

[tool.ruff]
line-length = 100
